[gd_scene load_steps=6 format=2]

[ext_resource path="res://player/player.gd" type="Script" id=1]
[ext_resource path="res://sprites/riker.png" type="Texture" id=2]
[ext_resource path="res://sounds/Laser_Shoot28.wav" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 9.18945, 27.0722 )

[sub_resource type="Animation" id=2]
resource_name = "hole"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:margin_top")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 0.0412346 ),
"update": 0,
"values": [ -32.0, 32.0 ]
}

[node name="Player" type="KinematicBody2D"]
collision_layer = 2147483650
script = ExtResource( 1 )

[node name="Sprite" type="TextureRect" parent="."]
margin_left = -16.0
margin_top = -32.0
margin_right = 16.0
margin_bottom = 32.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Muzzle" type="Position2D" parent="."]
position = Vector2( 9.12081, -28.0529 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 3 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/hole = SubResource( 2 )

[node name="HoleTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="BuffTimer" type="Timer" parent="."]
wait_time = 6.0
one_shot = true

[node name="LaserSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = -6.661
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
[connection signal="timeout" from="BuffTimer" to="." method="_on_BuffTimer_timeout"]
